--- a/.env.sample
+++ b/.env.sample
@@ -2,9 +2,20 @@ HTTP_PORT="9000"
 
 BASE_PATH="/api"
 
-# knex.js: pg, mysql, sqlite3
-DB_TYPE="sqlite3"
-
-SQLITE_FILE="temp/db.sqlite"
-
 JWT_SECRET="random-string-here"
+
+# ref https://typeorm.io/#/using-ormconfig
+TYPEORM_CONNECTION="sqlite"
+TYPEORM_DATABASE="temp/db.sqlite"
+
+TYPEORM_SYNCHRONIZE=true
+TYPEORM_LOGGING=false
+
+TYPEORM_ENTITIES="src/entity/**/*.ts"
+TYPEORM_ENTITIES_DIR="src/entity"
+
+TYPEORM_MIGRATIONS="src/migration/**/*.ts"
+TYPEORM_MIGRATIONS_DIR="src/migration"
+
+TYPEORM_SUBSCRIBERS="src/subscriber/**/*.ts"
+TYPEORM_SUBSCRIBERS_DIR="src/subscriber"
