--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rm -rf dist",
     "start:dev": "ts-node ./src/index.ts",
     "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register tests/**/*.spec.ts",
+    "test:coverage": "nyc npm run test",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "migrate": "npm run typeorm migration:run",
     "rollback": "npm run typeorm migration:revert"
@@ -37,9 +38,16 @@
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.15",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.11",
     "@types/express-jwt": "^6.0.1",
+    "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
+    "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.3.0",
+    "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
